src-tauri/test_output.txt
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
   Compiling emmm2 v0.1.0 (E:\Dev\EMMM2NEW\src-tauri)
error[E0061]: this function takes 10 arguments but 9 arguments were supplied
   --> src\database\tests\mod_repo_test.rs:30:5
    |
 30 |       create_object(
    |  _____^^^^^^^^^^^^^-
 31 | |         &pool,
 32 | |         "obj1",
 33 | |         "g1",
...   |
 39 | |         "{}",
 40 | |     )
    | |_____- argument #10 of type `std::option::Option<&std::string::String>` is missing
    |
note: function defined here
   --> src\database\object_repo.rs:163:14
    |
163 | pub async fn create_object(
    |              ^^^^^^^^^^^^^
...
173 |     thumbnail_path: Option<&String>,
    |     -------------------------------
help: provide the argument
    |
 30 |     create_object(
...
 39 |         "{}",
 40 ~         /* std::option::Option<&std::string::String> */,
 41 ~     )
    |

For more information about this error, try `rustc --explain E0061`.
error: could not compile `emmm2` (lib test) due to 1 previous error
